# document-explainer

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
.claude/: settings.local.json
docs/: PLAN.md  example-letters.md
prompts/: explainer_system.txt
src/: app.py  config.py  explainer.py  i18n.py  logger.py  main.py  ui_translator.py
src/templates/: index.html
tests/: test_app.py  test_config.py  test_explainer.py  test_logger.py  test_main.py  test_ui_translator.py
