[project]
name = "document-explainer"
version = "0.0.0"
description = "Explains official US letters in plain language, with translation and action items — for newcomers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "python-dotenv>=1.2.2",
    "flask>=3.0.0",
    "gunicorn>=23.0.0",
    "flask-limiter>=3.9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
